upd: Dockerfile java for build